syntax = "proto3";

option csharp_namespace = "CalendarExtractor.API";

package calendar_access;

service calendar_access {
	rpc get_calendar_information (calendar_information_request) returns (stream calendar_information_reply);
	rpc test_get_calendar_information (calendar_information_request) returns (stream calendar_information_reply);
}

message calendar_information_request {
	message Client {
		string client_id = 1;
		string client_secret = 2;
		string tenant_id = 3;
	}
	message Calendar {
		string calendar_id = 1;
		int64 begin_time = 2;
		int64 end_time = 3;
	}
	Client client = 1;
	Calendar calendar = 2;
}

message calendar_information_reply {
	string subject = 1;
	int64 begin_time = 2;
	int64 end_time = 3;
}